terraform/modules/buyer/manifests/app/istio-manifest/app-gateways/bap-apis/bap-apis-vs.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bap-apis-vs
  namespace: bap-apis
spec:
  hosts:
    - "*"
  gateways:
    - bap-apis-gateway
  http:
    - match:
        - uri:
            prefix: "/buyer/bap"
        - uri:
            prefix: "/buyer/bap/"
        - uri:
            prefix: "/bap"
        - uri:
            prefix: "/bap/"
      rewrite:
        uri: " "
      route:
        - destination:
            port:
              number: 8001
            host: bap-apis-service
